@@ -1,3 +1,0 @@
-RECOVERY = TRUE
-LOGIN = FALSE
-ERASE = FALSE
