@@ -1,0 +1,2 @@
+print "Assistant running"
+print "Not Ready!"
